--- a/assets/_manifesto.haml
+++ b/assets/_manifesto.haml
@@ -1,29 +1,25 @@
 %p.text.big_letter
   <%= introduction %>
 .left
-  <%= not_only %>
-  <%= working_software %>
+  <%= not_only %><%= working_software %>
 .right
   <%= but_also %>
   %span.value
     <%= well_crafted_software %>
 .left
-  <%= not_only %>
-  <%= responding_to_change %>
+  <%= not_only %><%= responding_to_change %>
 .right
   <%= but_also %>
   %span.value
     <%= steadily_adding_value %>
 .left
-  <%= not_only %>
-  <%= individuals_and_interactions %>
+  <%= not_only %><%= individuals_and_interactions %>
 .right
   <%= but_also %>
   %span.value
     <%= a_community_of_professionals %>
 .left
-  <%= not_only %>
-  <%= customer_collaboration %>
+  <%= not_only %><%= customer_collaboration %>
 .right
   <%= but_also %>
   %span.value
