--- a/assets/stylesheets/screen.scss
+++ b/assets/stylesheets/screen.scss
@@ -1,77 +1,16 @@
 /* CSS Document by Dieter Schneider 2006 www.csstemplateheaven.com */
 
+@import "languages";
+
 * {
   margin: 0;
-  paddingw: 0;
+  padding: 0;
 }
 
 /*********************************** Site Structure ******************************/
 
 html {
   overflow-y: scroll;
-}
-
-body {
-  font-size: 62.5%;
-  background-color: #000000;
-  &:lang(en) {
-    font-family: en;
-  }
-  &:lang(es) {
-    font-family: es;
-  }
-  &:lang(zh-tw) {
-    font-family: zh-tw;
-  }
-  &:lang(zh-hk) {
-    font-family: zh-hk;
-  }
-  &:lang(zh-cn) {
-    font-family: zh-cn;
-  }
-}
-
-@font-face {
-  font-family: en;
-  src: local("Georgia"), local("Times New Roman"), local("Times"), local("serif");
-}
-
-@font-face {
-  font-family: es;
-  src: local("Georgia"), local("Times New Roman"), local("Times"), local("serif");
-}
-
-@font-face {
-  font-family: zh-tw;
-  src: local("BiauKai"), local("微軟正黑體");
-}
-
-@font-face {
-  font-family: zh-tw;
-  unicode-range: U+00-024F;
-  src: local("Georgia"), local("Times New Roman"), local("Times"), local("serif");
-}
-
-@font-face {
-  font-family: zh-hk;
-  src: local("BiauKai"), local("微軟正黑體");
-}
-
-@font-face {
-  font-family: zh-hk;
-  unicode-range: U+00-024F;
-  src: local("Georgia"), local("Times New Roman"), local("Times"), local("serif");
-}
-
-@font-face {
-  font-family: zh-cn;
-  src: local("STKaiti"), local("微軟雅黑體");
-}
-
-@font-face {
-  font-family: zh-cn;
-  unicode-range: U+00-024F;
-  src: local("Georgia"), local("Times New Roman"), local("Times"), local("serif");
 }
 
 .translations {
@@ -210,6 +149,11 @@ table.form_fields {
 
 .value {
   font-size: 18pt;
+  font-weight: bold;
+}
+
+.value:lang(es) {
+  font-size: 15pt;
   font-weight: bold;
 }
 
