--- a/assets/index.haml
+++ b/assets/index.haml
@@ -28,8 +28,8 @@
   %body
     .translations
       %a#en{:href => "#", :style => "font-family: en;"} English
-      / |
-      / %a#es{:href => "#", :style => "font-family: zh-cn;"} Español
+      |
+      %a#es{:href => "#", :style => "font-family: es;"} Español
       |
       %a#zh-cn{:href => "#", :style => "font-family: zh-cn;"} 简体中文
     #container
