--- a/assets/index.haml
+++ b/assets/index.haml
@@ -33,11 +33,11 @@
       |
       %a#zh-cn{:href => "#", :style => "font-family: zh-cn;"} 简体中文
     #container
-      #content_top
+      #content_top.content_top-image
       #content
         #message
         #sign
         #reading
         #manifesto
         %table#signatory-table{"data-id" => "1"}
-      #footer
+      #footer.footer-image
