--- a/assets/_content_top.haml
+++ b/assets/_content_top.haml
@@ -1,3 +1,3 @@
-%a.heading_title{:href => "#"}
+%a.heading_title.title-image{:href => "#"}
   %span.invisible_headings Manifesto for Software Craftsmanship
 %h2 <%= raising_the_bar %>
