--- a/assets/index.haml
+++ b/assets/index.haml
@@ -31,6 +31,8 @@
       |
       %a#es{:href => "#", :style => "font-family: es;"} Español
       |
+      %a#tr{:href => "#", :style => "font-family: tr;"} Türkçe
+      |
       %a#zh-cn{:href => "#", :style => "font-family: zh-cn;"} 简体中文
     #container
       #content_top.content_top-image
