--- a/assets/_manifesto.haml
+++ b/assets/_manifesto.haml
@@ -33,11 +33,11 @@
   %br
   <%= but_only_in_its_entirety_through_this_notice %>
 %p.text_center
-  %a#sign{:href => "#"}
+  %a#sign{:href => "#/sign"}
     <%= sign_the_manifesto %>
 %p.text_center
-  %a{:href => "http://maps.google.com/maps?hl=en&q=http://manifesto.softwarecraftsmanship.org/map&z=2"}
+  %a{:href => "http://maps.google.com/maps?hl=en&q=http://manifesto.softwarecraftsmanship.org/map&z=2", :target => "_blank"}
     <%= view_map %>
 %p.text_center
-  %a#reading{:href => "#"}
+  %a#reading{:href => "#/reading"}
     <%= further_reading %>
