--- a/assets/index.haml
+++ b/assets/index.haml
@@ -6,6 +6,7 @@
     %link{:href => "stylesheets/screen.css", :media => "screen", :rel => "stylesheet", :type => "text/css"}/
     %script{:src => "javascripts/vendor/jquery-1.8.2.js", :type => "text/javascript"}
     %script{:src => "javascripts/vendor/underscore.js", :type => "text/javascript"}
+    %script{:src => "javascripts/vendor/yui-3.7.3.js", :type => "text/javascript"}
     %script{:src => "javascripts/setup.js", :type => "text/javascript"}
     %script{:src => "javascripts/partials.js", :type => "text/javascript"}
     %script{:src => "javascripts/transitions.js", :type => "text/javascript"}
@@ -27,13 +28,13 @@
       = render "reading"
   %body
     .translations
-      %a#en{:href => "#", :style => "font-family: en;"} English
+      %a#en{:href => "#/en", :style => "font-family: en;"} English
       |
-      %a#es{:href => "#", :style => "font-family: es;"} Español
+      %a#es{:href => "#/es", :style => "font-family: es;"} Español
       |
-      %a#tr{:href => "#", :style => "font-family: tr;"} Türkçe
+      %a#tr{:href => "#/tr", :style => "font-family: tr;"} Türkçe
       |
-      %a#zh-cn{:href => "#", :style => "font-family: zh-cn;"} 简体中文
+      %a#zh-cn{:href => "#/zh-cn", :style => "font-family: zh-cn;"} 简体中文
     #container
       #content_top.content_top-image
       #content
