--- a/assets/index.haml
+++ b/assets/index.haml
@@ -28,6 +28,8 @@
       = render "reading"
   %body
     .translations
+      %a#tr{:href => "#/de", :style => "font-family: de;"} Deutsch
+      |
       %a#en{:href => "#/en", :style => "font-family: en;"} English
       |
       %a#es{:href => "#/es", :style => "font-family: es;"} Español
