--- a/assets/stylesheets/screen.scss
+++ b/assets/stylesheets/screen.scss
@@ -136,6 +136,7 @@ table.form_fields {
   margin-left: auto;
   margin-right: auto;
   td.button-cell {
+    padding-right: 3px;
     height: 45px;
   }
 }
@@ -261,7 +262,7 @@ a {
 
 .heading_title {
   width: 450px;
-  height: 55px;
+  height: 54px;
   display: block;
   margin: -3px auto -2px auto;
 }
