--- a/assets/_manifesto.haml
+++ b/assets/_manifesto.haml
@@ -36,7 +36,7 @@
   %a#sign{:href => "#/sign"}
     <%= sign_the_manifesto %>
 %p.text_center
-  %a{:href => "http://maps.google.com/maps?hl=en&q=http://manifesto.softwarecraftsmanship.org/map&z=2", :target => "_blank"}
+  %a#view{:href => "http://maps.google.com/maps?hl=en&q=http://manifesto.softwarecraftsmanship.org/map&z=2", :target => "_blank"}
     <%= view_map %>
 %p.text_center
   %a#reading{:href => "#/reading"}
