Add French translation

--- a/assets/index.haml
+++ b/assets/index.haml
@@ -40,6 +40,8 @@
       |
       %a#es{:href => "#/es", :style => "font-family: es;"} Español
       |
+      %a#fr-fr{:href => "#/fr-fr", :style => "font-family: fr-fr;"} Français
+      |
       %a#tr{:href => "#/tr", :style => "font-family: tr;"} Türkçe
       |
       %a#zh-cn{:href => "#/zh-cn", :style => "font-family: zh-cn;"} 简体中文
