--- a/assets/index.haml
+++ b/assets/index.haml
@@ -42,6 +42,8 @@
       |
       %a#fr-fr{:href => "#/fr-fr", :style => "font-family: fr-fr;"} Français
       |
+      %a#tr{:href => "#/ru-ru", :style => "font-family: ru-ru;"} Русский
+      |
       %a#tr{:href => "#/tr", :style => "font-family: tr;"} Türkçe
       |
       %a#zh-cn{:href => "#/zh-cn", :style => "font-family: zh-cn;"} 简体中文
