--- a/assets/index.haml
+++ b/assets/index.haml
@@ -47,6 +47,8 @@
       %a#tr{:href => "#/tr", :style => "font-family: tr;"} Türkçe
       |
       %a#zh-cn{:href => "#/zh-cn", :style => "font-family: zh-cn;"} 简体中文
+      |
+      %a#vi{:href => "#/vi", :style => "font-family: vi;"} Tiếng Việt
     #container
       #content_top.content_top-image
       #content
